# django-sitevars

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  manage.py  pyproject.toml  tox.ini
.github/workflows/: release.yml  test.yml
src/sitevars/: admin.py  apps.py  checks.py  context_processors.py  models.py
src/sitevars/migrations/: 0001_initial.py
src/sitevars/templatetags/: sitevars.py
test_project/: settings.py  test_sitevars.py  wsgi.py
